--- a/class_5/Module5_Feature_Engineering.ipynb
+++ b/class_5/Module5_Feature_Engineering.ipynb
@@ -10,30 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mDEPRECATION: Configuring installation scheme with distutils config files is deprecated and will no longer work in the near future. If you are using a Homebrew or Linuxbrew Python, please see discussion at https://github.com/Homebrew/homebrew-core/issues/76621\u001b[0m\u001b[33m\n",
-      "\u001b[0mCollecting scikit-learn\n",
-      "  Downloading scikit_learn-1.2.2-cp39-cp39-macosx_10_9_x86_64.whl (9.1 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.1/9.1 MB\u001b[0m \u001b[31m6.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: numpy>=1.17.3 in /usr/local/lib/python3.9/site-packages (from scikit-learn) (1.24.1)\n",
-      "Requirement already satisfied: scipy>=1.3.2 in /usr/local/lib/python3.9/site-packages (from scikit-learn) (1.10.1)\n",
-      "Collecting joblib>=1.1.1 (from scikit-learn)\n",
-      "  Downloading joblib-1.2.0-py3-none-any.whl (297 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m298.0/298.0 kB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hCollecting threadpoolctl>=2.0.0 (from scikit-learn)\n",
-      "  Downloading threadpoolctl-3.1.0-py3-none-any.whl (14 kB)\n",
-      "Installing collected packages: threadpoolctl, joblib, scikit-learn\n",
-      "\u001b[33m  DEPRECATION: Configuring installation scheme with distutils config files is deprecated and will no longer work in the near future. If you are using a Homebrew or Linuxbrew Python, please see discussion at https://github.com/Homebrew/homebrew-core/issues/76621\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33m  DEPRECATION: Configuring installation scheme with distutils config files is deprecated and will no longer work in the near future. If you are using a Homebrew or Linuxbrew Python, please see discussion at https://github.com/Homebrew/homebrew-core/issues/76621\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33m  DEPRECATION: Configuring installation scheme with distutils config files is deprecated and will no longer work in the near future. If you are using a Homebrew or Linuxbrew Python, please see discussion at https://github.com/Homebrew/homebrew-core/issues/76621\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mDEPRECATION: Configuring installation scheme with distutils config files is deprecated and will no longer work in the near future. If you are using a Homebrew or Linuxbrew Python, please see discussion at https://github.com/Homebrew/homebrew-core/issues/76621\u001b[0m\u001b[33m\n",
-      "\u001b[0mSuccessfully installed joblib-1.2.0 scikit-learn-1.2.2 threadpoolctl-3.1.0\n",
+      "Requirement already satisfied: scikit-learn in /Users/xinyuanliang/anaconda3/lib/python3.10/site-packages (1.2.1)\n",
+      "Requirement already satisfied: joblib>=1.1.1 in /Users/xinyuanliang/anaconda3/lib/python3.10/site-packages (from scikit-learn) (1.1.1)\n",
+      "Requirement already satisfied: scipy>=1.3.2 in /Users/xinyuanliang/anaconda3/lib/python3.10/site-packages (from scikit-learn) (1.10.0)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/xinyuanliang/anaconda3/lib/python3.10/site-packages (from scikit-learn) (2.2.0)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in /Users/xinyuanliang/anaconda3/lib/python3.10/site-packages (from scikit-learn) (1.23.5)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -52,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +177,7 @@
        "4  20.945017   49           67.864721  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +376,7 @@
        "[1000 rows x 7 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +387,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.83307829,  0.56018194, -1.55294657, ..., -0.22412277,\n",
+       "         1.14269478, -0.63338338],\n",
+       "       [ 0.4512654 ,  0.90776004, -1.74060609, ...,  0.57101965,\n",
+       "        -0.70913511,  0.21475549],\n",
+       "       [ 1.0374471 , -0.45026831,  0.10204581, ..., -0.75583399,\n",
+       "         1.48991288, -1.10966984],\n",
+       "       ...,\n",
+       "       [ 0.14128098,  0.14957952, -0.14796473, ...,  0.04201028,\n",
+       "        -1.75078942, -0.8588623 ],\n",
+       "       [-1.11683607, -1.19352006, -1.21713308, ..., -0.79251393,\n",
+       "         1.25843415, -0.36019768],\n",
+       "       [-0.31696743, -1.3681492 , -0.03078234, ..., -1.18625179,\n",
+       "        -0.47765637,  1.33343233]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +526,7 @@
        "4 -0.772500  1.500282  0.797973  0.753864  1.115887 -0.730499  0.036682"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +634,7 @@
        "4 -0.772500  1.500282"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +820,7 @@
        "4        75        0.0       0           1      1  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,8 +830,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "holiday and working day are 0 or 1 variable "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +895,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'10-50'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_cat(19)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1090,7 @@
        "4               0-10  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1053,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,7 +1127,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def application_function(x):\n",
+    "    good_bad(x['temp'],x['humidity'])\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1309,7 @@
        "4               0-10  good day  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1261,19 +1320,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dummy variables - convert season to dummies; first - rename season\n",
     "\n",
     "season_mapping = {1:'winter', 2:'spring', 3:'summer', 4:'fall'}\n",
-    "bikes['season'] = bikes['season'].map(season_mapping)\n"
+    "bikes['season'] = bikes['season'].map(season_mapping)\n",
+    "\n",
+    "#\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1444,7 +1505,7 @@
        "4               0-10  good day  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1455,7 +1516,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10886 entries, 0 to 10885\n",
+      "Data columns (total 21 columns):\n",
+      " #   Column              Non-Null Count  Dtype         \n",
+      "---  ------              --------------  -----         \n",
+      " 0   datetime            10886 non-null  datetime64[ns]\n",
+      " 1   season              0 non-null      object        \n",
+      " 2   holiday             10886 non-null  int64         \n",
+      " 3   workingday          10886 non-null  int64         \n",
+      " 4   weather             10886 non-null  int64         \n",
+      " 5   temp                10886 non-null  float64       \n",
+      " 6   atemp               10886 non-null  float64       \n",
+      " 7   humidity            10886 non-null  int64         \n",
+      " 8   windspeed           10886 non-null  float64       \n",
+      " 9   casual              10886 non-null  int64         \n",
+      " 10  registered          10886 non-null  int64         \n",
+      " 11  count               10886 non-null  int64         \n",
+      " 12  hour                10886 non-null  int64         \n",
+      " 13  month               10886 non-null  int64         \n",
+      " 14  day                 10886 non-null  int64         \n",
+      " 15  rental_total_group  10886 non-null  object        \n",
+      " 16  day_type            10886 non-null  object        \n",
+      " 17  fall                10886 non-null  uint8         \n",
+      " 18  spring              10886 non-null  uint8         \n",
+      " 19  summer              10886 non-null  uint8         \n",
+      " 20  winter              10886 non-null  uint8         \n",
+      "dtypes: datetime64[ns](1), float64(3), int64(10), object(3), uint8(4)\n",
+      "memory usage: 1.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "bikes.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1465,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1544,18 +1649,18 @@
        "4     0       0       0       1"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "season_dummies.head()"
+    "season_dummies.head() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1564,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1762,7 +1867,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1816,7 +1921,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
