--- a/class_5/Module5_Feature_Engineering.ipynb
+++ b/class_5/Module5_Feature_Engineering.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -18,10 +18,10 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: scikit-learn in /Users/xinyuanliang/anaconda3/lib/python3.10/site-packages (1.2.1)\n",
-      "Requirement already satisfied: joblib>=1.1.1 in /Users/xinyuanliang/anaconda3/lib/python3.10/site-packages (from scikit-learn) (1.1.1)\n",
-      "Requirement already satisfied: scipy>=1.3.2 in /Users/xinyuanliang/anaconda3/lib/python3.10/site-packages (from scikit-learn) (1.10.0)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/xinyuanliang/anaconda3/lib/python3.10/site-packages (from scikit-learn) (2.2.0)\n",
       "Requirement already satisfied: numpy>=1.17.3 in /Users/xinyuanliang/anaconda3/lib/python3.10/site-packages (from scikit-learn) (1.23.5)\n",
+      "Requirement already satisfied: scipy>=1.3.2 in /Users/xinyuanliang/anaconda3/lib/python3.10/site-packages (from scikit-learn) (1.10.0)\n",
+      "Requirement already satisfied: joblib>=1.1.1 in /Users/xinyuanliang/anaconda3/lib/python3.10/site-packages (from scikit-learn) (1.1.1)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/xinyuanliang/anaconda3/lib/python3.10/site-packages (from scikit-learn) (2.2.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "4  20.945017   49           67.864721  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
        "[1000 rows x 7 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
        "        -0.47765637,  1.33343233]])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
        "4 -0.772500  1.500282  0.797973  0.753864  1.115887 -0.730499  0.036682"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
        "4 -0.772500  1.500282"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +820,7 @@
        "4        75        0.0       0           1      1  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +904,7 @@
        "'10-50'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1090,7 @@
        "4               0-10  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1309,7 @@
        "4               0-10  good day  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1505,7 +1505,7 @@
        "4               0-10  good day  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1516,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1525,11 +1525,11 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 10886 entries, 0 to 10885\n",
-      "Data columns (total 21 columns):\n",
+      "Data columns (total 17 columns):\n",
       " #   Column              Non-Null Count  Dtype         \n",
       "---  ------              --------------  -----         \n",
       " 0   datetime            10886 non-null  datetime64[ns]\n",
-      " 1   season              0 non-null      object        \n",
+      " 1   season              10886 non-null  object        \n",
       " 2   holiday             10886 non-null  int64         \n",
       " 3   workingday          10886 non-null  int64         \n",
       " 4   weather             10886 non-null  int64         \n",
@@ -1545,12 +1545,8 @@
       " 14  day                 10886 non-null  int64         \n",
       " 15  rental_total_group  10886 non-null  object        \n",
       " 16  day_type            10886 non-null  object        \n",
-      " 17  fall                10886 non-null  uint8         \n",
-      " 18  spring              10886 non-null  uint8         \n",
-      " 19  summer              10886 non-null  uint8         \n",
-      " 20  winter              10886 non-null  uint8         \n",
-      "dtypes: datetime64[ns](1), float64(3), int64(10), object(3), uint8(4)\n",
-      "memory usage: 1.5+ MB\n"
+      "dtypes: datetime64[ns](1), float64(3), int64(10), object(3)\n",
+      "memory usage: 1.4+ MB\n"
      ]
     }
    ],
@@ -1560,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1570,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1649,7 +1645,7 @@
        "4     0       0       0       1"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1660,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1669,7 +1665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1867,7 +1863,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
